--- a/ultimate_mlb_manager_frontend/menu.css
+++ b/ultimate_mlb_manager_frontend/menu.css
@@ -15,10 +15,10 @@ body {
     padding-top: 60px;
   }
   
-  .sidenav a {
+  .sidenav li {
+    text-align: left;
     padding: 8px 8px 8px 32px;
-    text-decoration: none;
-    font-size: 25px;
+    font-size: 15px;
     color: #818181;
     display: block;
     transition: 0.3s;
