--- a/ultimate_mlb_manager_frontend/menu.css
+++ b/ultimate_mlb_manager_frontend/menu.css
@@ -22,6 +22,16 @@ body {
     color: #818181;
     display: block;
     transition: 0.3s;
+    list-style: decimal;
+  }
+
+  .sidenav a {
+    text-align: left;
+    padding: 8px 8px 8px 32px;
+    font-size: 20px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
   }
   
   .sidenav a:hover {
@@ -34,6 +44,7 @@ body {
     right: 25px;
     font-size: 36px;
     margin-left: 50px;
+    color: #f1f1f1;
   }
   
   @media screen and (max-height: 450px) {
@@ -42,14 +53,14 @@ body {
   }
 
   .topnav {
-    background-color: #333;
+    background-color: #cfcfcf;
     overflow: hidden;
   }
   
   /* Style the links inside the navigation bar */
   .topnav a {
     float: left;
-    color: #f2f2f2;
+    color: #044484;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
@@ -64,6 +75,6 @@ body {
   
   /* Add a color to the active/current link */
   .topnav a.active {
-    background-color: #4CAF50;
+    background-color: #044484;
     color: white;
   }
