--- a/ultimate_mlb_manager_frontend/style.css
+++ b/ultimate_mlb_manager_frontend/style.css
@@ -99,7 +99,7 @@ h1, h2, h3, h4, h5 {
   box-shadow: 0px 5px 20px -10px #111111;
   
   
-  &--water {
+  &--player {
   background: linear-gradient(120deg, #1CB5E0 0%, #000851 100%);    
     box-shadow: 0px 5px 20px -10px #000851;
     .card__type {
