Updaded ReadMe, toggle cards

--- a/ultimate_mlb_manager_frontend/menu.css
+++ b/ultimate_mlb_manager_frontend/menu.css
@@ -78,3 +78,11 @@ body {
     background-color: #044484;
     color: white;
   }
+
+  .isDisabled {
+    color: currentColor;
+    cursor: not-allowed;
+    opacity: 0.5;
+    text-decoration: none;
+    pointer-events: none;
+  }
