Added Hover styles to cards

--- a/ultimate_mlb_manager_frontend/style.css
+++ b/ultimate_mlb_manager_frontend/style.css
@@ -24,6 +24,7 @@ h1, h2, h3, h4, h5 {
   margin: 10px;
   background: #ddd;
   text-align: left;
+  transition: transform .2s;
   
 
   &__caption {
@@ -94,10 +95,7 @@ h1, h2, h3, h4, h5 {
   &__ability {
     margin-top: 1em;
     flex: 1 0;
-  }
-  
-  box-shadow: 0px 5px 20px -10px #111111;
-  
+  }  
   
   &--player {
   background: linear-gradient(120deg, #1CB5E0 0%, #000851 100%);    
@@ -125,5 +123,10 @@ h1, h2, h3, h4, h5 {
     transform:translateY(-10px);
   }
   
+}
+
+.card:hover {
+  transform: scale(1.1); 
+  box-shadow: 5px 10px 18px #1CB5E0;
 }
 
