--- a/ultimate_mlb_manager_frontend/menu.css
+++ b/ultimate_mlb_manager_frontend/menu.css
@@ -65,6 +65,7 @@ body {
     padding: 14px 16px;
     text-decoration: none;
     font-size: 17px;
+    cursor: pointer;
   }
   
   /* Change the color of links on hover */
