--- a/ultimate_mlb_manager_frontend/style.css
+++ b/ultimate_mlb_manager_frontend/style.css
@@ -130,3 +130,12 @@ h1, h2, h3, h4, h5 {
   box-shadow: 5px 10px 18px #044484;
 }
 
+.flex {
+  display: flex;
+  flex-wrap: nowrap; 
+  overflow: auto;
+}
+.flex-item {
+  flex: 0 0 auto;
+}
+
